# pypypy

./: .gitignore  pyproject.toml
src/pypypy/: __init__.py  main.py
tests/: test_pypypy.py
