[tool.poetry]
name = "pypypy"
version = "0.1.0"
description = ""
authors = ["Damian Cyntler <damian@cyntler.com>"]

[tool.poetry.scripts]
start = 'pypypy:main'

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
black = {version = "^22.6.0", python = ">=3.6.2"}
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
